@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.1</version>
+        <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -16,7 +16,7 @@
     <description>Saksbehandling Barnetrygd</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <kotlin.version>1.6.10</kotlin.version>
         <revision>1</revision>
         <sha1/>
@@ -24,13 +24,13 @@
         <spring.cloud.version>3.1.0</spring.cloud.version>
         <spring.vault.version>2.3.2</spring.vault.version>
         <prosessering.version>1.20211125150647_a7c6f64</prosessering.version>
-        <felles.version>1.20211202083100_64f46dd</felles.version>
+        <felles.version>1.20211217154554_3bb883e</felles.version>
         <eksterne-kontrakter-bisys.version>2.0_20211221122007_2c5c69d</eksterne-kontrakter-bisys.version>
         <felles-kontrakter.version>2.0_20211220104445_a348ae3</felles-kontrakter.version>
         <familie.kontrakter.saksstatistikk>2.0_20211026082237_0675986</familie.kontrakter.saksstatistikk>
         <familie.kontrakter.stønadsstatistikk>2.0_20211213110639_d45ec56</familie.kontrakter.stønadsstatistikk>
         <familie.kontrakter.skatteetaten>2.0_20210920094114_9c74239</familie.kontrakter.skatteetaten>
-        <mockk.version>1.12.1</mockk.version>
+        <mockk.version>1.12.2</mockk.version>
         <token-validation-spring.version>1.3.9</token-validation-spring.version>
         <nav-foedselsnummer.version>1.0-SNAPSHOT.6</nav-foedselsnummer.version>
         <springdoc.version>1.6.2</springdoc.version>
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
-            <version>2.13.0</version>
+            <version>2.13.1</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
@@ -130,7 +130,7 @@
         <dependency>
             <groupId>io.sentry</groupId>
             <artifactId>sentry-logback</artifactId>
-            <version>5.5.0</version>
+            <version>5.5.2</version>
         </dependency>
 
         <dependency>
@@ -413,6 +413,9 @@
                                           classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                         <arg value="-F"/>
                                         <arg value="src/**/*.kt"/>
+                                        <!-- Trenger dette for å kjøre ktlint med java 17 -->
+                                        <jvmarg value="--add-opens"/>
+                                        <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                                     </java>
                                 </target>
                             </configuration>
